updating README and SSL bug

--- a/duologsync/config.yml
+++ b/duologsync/config.yml
@@ -16,6 +16,8 @@ transport:
   protocol: "TCP"
   host: "localhost"
   port: 8888
+  certFileDir: "/tmp"
+  certFileName: "selfsigned.cert"
 
 recoverFromCheckpoint:
   enabled: False
