--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,10 @@ coverage.xml
 .pytest_cache/
 TEST-duo_log_sync.xml
 
+# Linter
+codequality.json
+!_ci/lib/pylint_to_gitlab_codeclimate.py
+
 # Translations
 *.mo
 *.pot
