--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,9 @@ attrs==19.3.0 \
     --hash=sha256:08a96c641c3a74e44eb59afb61a24f2cb9f4d7188748e76ba4bb5edfa3cb7d1c \
     --hash=sha256:f7b7ce16570fe9965acd6d30101a28f62fb4a7f9e926b3bbc9b61f8b04247e72 \
     # via pytest
+cerberus==1.3.2 \
+    --hash=sha256:302e6694f206dd85cb63f13fd5025b31ab6d38c99c50c6d769f8fa0b0f299589 \
+    # via -r requirements.txt
 duo_client==4.2.3 \
     --hash=sha256:99122a632108a46ee7285c12e4cc6269f5b2614e4be99fe55d6a044fd0d6f278 \
     # via -r requirements.txt
