Changed field in config file

--- a/tests/resources/config_files/polling_too_low.yml
+++ b/tests/resources/config_files/polling_too_low.yml
@@ -3,7 +3,7 @@ duoclient:
   ikey: "BUNCH OF RANDOM CHARACTERS ALL UPPER CASE"
   host: "duosecurity.com"
 logs:
-  logDir: "/tmp"
+  logFilepath: "/tmp/duologsync.log"
   endpoints:
     enabled: ["auth", "adminaction", "telephony"]
   polling:
