--- a/tests/resources/config_files/bad_config.yml
+++ b/tests/resources/config_files/bad_config.yml
@@ -2,7 +2,7 @@ duoclient:
   ikey: "BUNCH OF RANDOM CHARACTERS ALL UPPER CASE"
   host: "duosecurity.com"
 logs:
-  logDir: "/tmp"
+  logFilepath: "/tmp/duologsync.log"
   unnecessary_field: "telephony"
   endpoints:
     enabled: ["duo rocks!", "adminaction", "telephony"]
