--- a/template_config.yml
+++ b/template_config.yml
@@ -1,64 +1,133 @@
-# Important credentials needed for DLS to access your Duo logs
-duoclient:
+# All fields must have a value. If a field does not have a value, the config
+# will be considered invalid. Fields which have a default value (specified in
+# each field description) may be excluded if you do not have a preference for
+# what value to assign that field. All other fields must be present in this
+# config and be given a value, otherwise the config will be invalid.
+
+# Version of the config file. Do not change! Automatically updated for each
+# config file update
+version: "1.0.0"
+
+dls_settings:
+    
+  # File where DuoLogSync (DLS) program messages / logs should be saved
+  # DEFAULT: "/tmp/duologsync.log"
+  log_filepath: "/tmp/duologsync.log"
+
+  # How Duo logs should be formatted before being sent to a server
+  # OPTIONS: CEF, JSON
+  # DEFAULT: JSON
+  log_format: "JSON"
+
+  # Setting related to API calls for Duo logs
+  api:
+
+    # Days in the past from which record retrieval should begin.
+    # MINIMUM: 0
+    # MAXIMUM: 180
+    # DEFAULT: 180
+    offset: 180
+
+    # Seconds to wait between API calls (for fetching Duo logs)
+    # MINIMUM: 120
+    # DEFAULT: 120
+    timeout: 120
+
+  # Settings related to saving API call offset information into files for use
+  # when DLS crashes so that DLS can pickup where it left off. Useful for
+  # reducing the chance of consuming duplicate logs when a crash occurs.
+  checkpointing:
+
+    # Whether checkpoint files should be created to save offset information
+    # about API calls.
+    # OPTIONS: False, True
+    # DEFAULT: False
+    enabled: False
+
+    # Directory where checkpoint files should be stored.
+    # REQUIRED: if enabled is True
+    checkpoint_dir: "/tmp/dls_checkpoints"
+
+# List of servers and how DLS will communicate with them
+servers:
+  - Server_1:
+
+    # Address of server to which Duo logs will be sent
+    # REQUIRED
+    hostname: ""
+
+    # Port of server to which logs will be sent
+    # MINIMUM: 0
+    # MAXIMUM: 65535
+    # REQUIRED
+    port: ""
+
+    # Transport protocol used to communicate with the server
+    # OPTIONS: TCP, TCPSSL, UDP
+    # REQUIRED
+    protocol: ""
+
+    # Location of the certificate file used for encrypting communication for
+    # TCPSSL
+    # REQUIRED: Only if protocol is TCPSSL
+    cert_filepath: ""
+
+# To add another server, copy and paste the above, change the server name to
+# something unique and descriptive, and fill out the 3 (or 4) fields required
+# like so...
+# - Server_2:
+    # hostname:
+    # port:
+    # protocol:
+    # cert_filepath:
+
+# List of accounts which are used to access Duo logs and tell DLS which logs
+# to fetch
+accounts:
   
-  # Private key, keep this safe!
-  skey: ""
+  # Rename Account_1 to something more descriptive for your purposes
+  - Account_1:
+    # Integration key
+    # REQUIRED
+    ikey: ""
 
-  # Integration key
-  ikey: ""
+    # Private key, keep this safe
+    # REQUIRED
+    skey: ""
 
-  # Address of server that is hosting your logs
-  host: ""
+    # Address of the server hosting this account's logs
+    # REQUIRED
+    hostname: ""
+    
+    # Server to which logs from this account should be sent. Simply include the
+    # names of one of the servers from the list further up in this config
+    # REQUIRED
+    server: ""
 
-logs:
+    # List of endpoints for which logs from this accounts should be requested
+    # OPTIONS: admin, auth, telephony
+    # REQUIRED
+    endpoints:
 
-  # File where DuoLogSync program logs (messages) should be saved
-  # Default: '/tmp/duologsync.log'
-  logFilepath: ""
+    # Whether this account is a parent to a bunch of child accounts. If True,
+    # then all the child accounts will be accessed and logs will be pulled for
+    # each child account
+    # DEFAULT: False
+    parent: True
 
-  # Choose what endpoints for which DuoLogSync should retrieve logs
-  # Options: adminaction, auth, telephony
-  endpoints:
-    enabled: []
+    # The child accounts that should not be accessed in the case this account
+    # is a parent.
+    # REQUIRED: if parent is True
+    block_list: []
 
-  polling:
-    # How long to wait (in seconds) between API calls (to fetch logs)
-    # Minimum: 120 seconds (2 minutes)
-    # (2 minutes)
-    duration: 120
-
-    # How many days in the past logs may be polled from
-    # Maximum: 180
-    daysinpast: 180
-
-  # Directory where log checkpoint files are stored. Used to save offsets in
-  # the case that DuoLogSync crashes. Allows DuoLogSync to pick back up from
-  # where it crashed
-  checkpointDir: ""
-
-  # How logs should be formatted
-  # Options: CEF, JSON
-  # Default: JSON
-  log_format: ""
-
-# Defines location of server and how logs will be sent
-transport:
-  # Transport protocol used to send logs
-  # Options: TCP, TCPSSL, UDP
-  protocol: ""
-  
-  # Address of server that logs will be sent to
-  host: ""
-
-  # Port of server that logs will be sent to.
-  # Range: 0 - 65535
-  port: 8888
-
-  # Location of your certificate file, required for TCPSSL protocol
-  certFilepath: ""
-
-recoverFromCheckpoint:
-
-  # Whether DuoLogSync should use checkpoint files when starting up in order
-  # to pick up where it left off if a crash occurred
-  enabled: False
+# To add another account, uncomment the following, change the account name to
+# something descriptive and distinct from the other accounts and fill out the
+# required  fields
+# - Account_2:
+#   ikey:
+#   skey:
+#   hostname:
+#   server:
+#   endpoints:
+#   parent:
+#   block_list:
