--- a/template_config.yml
+++ b/template_config.yml
@@ -5,7 +5,7 @@
 # config and be given a value, otherwise the config will be invalid.
 
 # Version of the config file. Do not change! Automatically updated for each
-# config file update
+# config file change
 version: "1.0.0"
 
 dls_settings:
@@ -50,27 +50,29 @@ dls_settings:
 
 # List of servers and how DLS will communicate with them
 servers:
+  
+  # Rename Server_1 to something more descriptive for your purposes
   - Server_1:
 
-    # Address of server to which Duo logs will be sent
-    # REQUIRED
-    hostname: ""
+      # Address of server to which Duo logs will be sent
+      # REQUIRED
+      hostname: ""
 
-    # Port of server to which logs will be sent
-    # MINIMUM: 0
-    # MAXIMUM: 65535
-    # REQUIRED
-    port: ""
+      # Port of server to which logs will be sent
+      # MINIMUM: 0
+      # MAXIMUM: 65535
+      # REQUIRED
+      port: ""
 
-    # Transport protocol used to communicate with the server
-    # OPTIONS: TCP, TCPSSL, UDP
-    # REQUIRED
-    protocol: ""
+      # Transport protocol used to communicate with the server
+      # OPTIONS: TCP, TCPSSL, UDP
+      # REQUIRED
+      protocol: ""
 
-    # Location of the certificate file used for encrypting communication for
-    # TCPSSL
-    # REQUIRED: Only if protocol is TCPSSL
-    cert_filepath: ""
+      # Location of the certificate file used for encrypting communication for
+      # TCPSSL
+      # REQUIRED: Only if protocol is TCPSSL
+      cert_filepath: ""
 
 # To add another server, copy and paste the above, change the server name to
 # something unique and descriptive, and fill out the 3 (or 4) fields required
@@ -87,47 +89,47 @@ accounts:
   
   # Rename Account_1 to something more descriptive for your purposes
   - Account_1:
-    # Integration key
-    # REQUIRED
-    ikey: ""
+      # Integration key
+      # REQUIRED
+      ikey: ""
 
-    # Private key, keep this safe
-    # REQUIRED
-    skey: ""
+      # Private key, keep this safe
+      # REQUIRED
+      skey: ""
 
-    # Address of the server hosting this account's logs
-    # REQUIRED
-    hostname: ""
+      # Address of the server hosting this account's logs
+      # REQUIRED
+      hostname: ""
     
-    # Server to which logs from this account should be sent. Simply include the
-    # names of one of the servers from the list further up in this config
-    # REQUIRED
-    server: ""
+      # Server to which logs from this account should be sent. Simply include the
+      # names of one of the servers from the list further up in this config
+      # REQUIRED
+      server: ""
 
-    # List of endpoints for which logs from this accounts should be requested
-    # OPTIONS: admin, auth, telephony
-    # REQUIRED
-    endpoints:
+      # List of endpoints for which logs from this accounts should be requested
+      # OPTIONS: admin, auth, telephony
+      # REQUIRED
+      endpoints:
 
-    # Whether this account is a parent to a bunch of child accounts. If True,
-    # then all the child accounts will be accessed and logs will be pulled for
-    # each child account
-    # DEFAULT: False
-    parent: True
+      # Whether this account is a parent to a bunch of child accounts. If True,
+      # then all the child accounts will be accessed and logs will be pulled for
+      # each child account
+      # DEFAULT: False
+      parent: True
 
-    # The child accounts that should not be accessed in the case this account
-    # is a parent.
-    # REQUIRED: if parent is True
-    block_list: []
+      # The child accounts that should not be accessed in the case this account
+      # is a parent.
+      # REQUIRED: if parent is True
+      block_list: []
 
 # To add another account, uncomment the following, change the account name to
 # something descriptive and distinct from the other accounts and fill out the
 # required  fields
 # - Account_2:
-#   ikey:
-#   skey:
-#   hostname:
-#   server:
-#   endpoints:
-#   parent:
-#   block_list:
+#     ikey:
+#     skey:
+#     hostname:
+#     server:
+#     endpoints:
+#     parent:
+#     block_list:
