--- a/template_config.yml
+++ b/template_config.yml
@@ -1,9 +1,7 @@
 # IMPORTANT!: Use single quotes (''), NOT double quotes ("")!
 # All fields must have a value. If a field does not have a value, the config
-# will be considered invalid. Fields which have a default value (specified in
-# each field description) may be excluded if you do not have a preference for
-# what value to assign that field. All other fields must be present in this
-# config and be given a value, otherwise the config will be invalid.
+# will be considered invalid. All fields are required. If you do not have
+# a preference for what value a field should get, leave the value provided.
 
 # Version of the config file. Do not change! Automatically updated for each
 # config file change
@@ -13,12 +11,10 @@ version: '1.0.0'
 dls_settings:
     
   # File where DLS program messages / logs should be saved
-  # DEFAULT: "/tmp/duologsync.log"
   log_filepath: '/tmp/duologsync.log'
 
   # How Duo logs should be formatted before being sent to a server
   # OPTIONS: CEF, JSON
-  # DEFAULT: JSON
   log_format: 'JSON'
 
   # Setting related to API calls for Duo logs
@@ -27,12 +23,10 @@ dls_settings:
     # Days in the past from which record retrieval should begin.
     # MINIMUM: 0
     # MAXIMUM: 180
-    # DEFAULT: 180
     offset: 180
 
     # Seconds to wait between API calls (for fetching Duo logs)
     # MINIMUM: 120
-    # DEFAULT: 120
     timeout: 120
 
   # Settings related to saving API call offset information into files for use
@@ -43,7 +37,6 @@ dls_settings:
     # Whether checkpoint files should be created to save offset information
     # about API calls.
     # OPTIONS: False, True
-    # DEFAULT: False
     enabled: False
 
     # Directory where checkpoint files should be stored.
