--- a/template_config.yml
+++ b/template_config.yml
@@ -1,47 +1,51 @@
 # IMPORTANT!: Use single quotes (''), NOT double quotes ("")!
-# All fields must have a value. If a field does not have a value, the config
-# will be considered invalid. All fields are required. If you do not have
-# a preference for what value a field should get, leave the value provided.
+# All fields marked 'REQUIRED' must have a value otherwise the config will be
+# considered invalid. If something is not marked required, you may remove that
+# field from the config if you are fine with the default value.
 
 # Version of the config file. Do not change! Automatically updated for each
 # config file change
 version: '1.0.0'
 
 # Fields for changing the functionality of DuoLogSync (DLS)
-dls_settings:
+# The fields for dls_settings, including dls_setting itself are not required.
+# Default values may be given for all the fields if you choose not to include
+# them.
+#dls_settings:
     
   # File where DLS program messages / logs should be saved
-  log_filepath: '/tmp/duologsync.log'
+  #log_filepath: '/tmp/duologsync.log'
 
   # How Duo logs should be formatted before being sent to a server
   # OPTIONS: CEF, JSON
-  log_format: 'JSON'
+  #log_format: 'JSON'
 
   # Setting related to API calls for Duo logs
-  api:
+  #api:
 
     # Days in the past from which record retrieval should begin.
     # MINIMUM: 0
     # MAXIMUM: 180
-    offset: 180
+    #offset: 180
 
     # Seconds to wait between API calls (for fetching Duo logs)
     # MINIMUM: 120
-    timeout: 120
+    #timeout: 120
 
   # Settings related to saving API call offset information into files for use
   # when DLS crashes so that DLS can pickup where it left off. Useful for
   # reducing the chance of consuming duplicate logs when a crash occurs.
-  checkpointing:
+  #checkpointing:
 
     # Whether checkpoint files should be created to save offset information
-    # about API calls.
+    # about API calls. If true, the value set for directory (or the default of
+    # '/tmp') is where DLS will look for checkpoint files to recover offset
+    # information from.
     # OPTIONS: False, True
-    enabled: False
+    #enabled: False
 
     # Directory where checkpoint files should be stored.
-    # REQUIRED: if enabled is True
-    checkpoint_dir: '/tmp'
+    #directory: '/tmp'
 
 # List of servers and how DLS will communicate with them
 servers:
@@ -79,54 +83,42 @@ servers:
 #   protocol:
 #   cert_filepath:
 
-# List of accounts which are used to access Duo logs and tell DLS which logs
-# to fetch.
-accounts:
+# Account which is used to access Duo logs and tell DLS which logs to fetch.
+account:
   
-    # Integration key
-    # REQUIRED
-  - ikey: ''
+  # Integration key
+  # REQUIRED
+  ikey: ''
 
-    # Private key, keep this safe
-    # REQUIRED
-    skey: ''
+  # Private key, keep this safe
+  # REQUIRED
+  skey: ''
 
-    # Address of the server hosting this account's logs
-    # REQUIRED
-    hostname: ''
+  # Address of the server hosting this account's logs
+  # REQUIRED
+  hostname: ''
     
-    # Here you define to what servers the logs of certain endpoints should go.
-    # This is done by creating a mapping (start with dash -) and then defining
-    # what endpoints the mapping is for as a list and the what servers apply to
-    # those endpoints as a list.
-    # ENDPOINTS OPTIONS: adminaction, auth, telephony
-    # SERVERS OPTIONS: any server id defined above in the list of servers
-    # REQUIRED
-    endpoint_server_mappings:
-      #- endpoints: ['adminaction', 'auth']
-      #  servers: ['Server_1', 'Server_2']
-      #- endpoints: ['telephony']
-      #  servers: ['Server_1']
+  # Here you define to what servers the logs of certain endpoints should go.
+  # This is done by creating a mapping (start with dash -) and then defining
+  # what endpoints the mapping is for as a list and the what servers apply to
+  # those endpoints as a list.
+  # ENDPOINTS OPTIONS: adminaction, auth, telephony
+  # SERVERS OPTIONS: any server id defined above in the list of servers
+  # REQUIRED
+  endpoint_server_mappings:
+    #- endpoints: ['adminaction', 'auth']
+    #  servers: ['Server_1', 'Server_2']
+    #- endpoints: ['telephony']
+    #  servers: ['Server_1']
 
-    # Whether this account is a Duo MSP account with child accounts. If True,
-    # then all the child accounts will be accessed and logs will be pulled for
-    # each child account
-    # DEFAULT: False
-    is_msp: True
+  # Whether this account is a Duo MSP account with child accounts. If True,
+  # then all the child accounts will be accessed and logs will be pulled for
+  # each child account
+  # DEFAULT: False
+  is_msp: False
 
-    # The child accounts that should not be accessed in the case this account
-    # is an MSP account.
-    # Only required if is_msp is True and if you need to block accounts from
-    # being accessed. It is fine to not include this field
-    block_list: []
-
-# To add another account, uncomment the following, change the account name to
-# something descriptive and distinct from the other accounts and fill out the
-# required  fields
-# - ikey:
-#   skey:
-#   hostname:
-#   server:
-#   endpoints:
-#   parent:
-#   block_list:
+  # The child accounts that should not be accessed in the case this account
+  # is an MSP account.
+  # Only required if is_msp is True and if you need to block accounts from
+  # being accessed. It is fine to not include this field
+  block_list: []
