Removed functionality for sending 1 log type to multiple locations

--- a/template_config.yml
+++ b/template_config.yml
@@ -100,16 +100,16 @@ account:
     
   # Here you define to what servers the logs of certain endpoints should go.
   # This is done by creating a mapping (start with dash -) and then defining
-  # what endpoints the mapping is for as a list and the what servers apply to
-  # those endpoints as a list.
+  # what endpoints the mapping is for as a list and the what server apply to
+  # those endpoints.
   # ENDPOINTS OPTIONS: adminaction, auth, telephony
   # SERVERS OPTIONS: any server id defined above in the list of servers
   # REQUIRED
   endpoint_server_mappings:
     #- endpoints: ['adminaction', 'auth']
-    #  servers: ['Server_1', 'Server_2']
+    #  server: 'Server_2'
     #- endpoints: ['telephony']
-    #  servers: ['Server_1']
+    #  server: 'Server_1'
 
   # Whether this account is a Duo MSP account with child accounts. If True,
   # then all the child accounts will be accessed and logs will be pulled for
