--- a/tests/resources/config_files/standard.yml
+++ b/tests/resources/config_files/standard.yml
@@ -8,6 +8,9 @@ dls_settings:
   checkpointing:
     enabled: False
     directory: '/tmp/dls_checkpoints'
+  proxy:
+    proxy_server: test.com
+    proxy_port: 1234
 servers:
   - id: 'main server'
     hostname: 'mysiem.com'
