--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
-include LICENSE HISTORY.md README.md requirements.txt requirements-dev.txt
+include LICENSE README.md requirements.txt requirements-dev.txt
 recursive-include tests *.py
